--- a/TccLulu-war/web/pessoa.xhtml
+++ b/TccLulu-war/web/pessoa.xhtml
@@ -16,8 +16,7 @@
                             <h:form>
                                 <p:growl id="growl" life="2000" />     
                                 <p:commandButton value="Incluir" id="incluir"  action="incluir_pessoa"/>
-                                <p:commandButton value="Editar" id="editar" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
-                                <p:commandButton value="Excluir" id="excluir" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
+                                <p:commandButton value="Editar" id="editar" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />                                
                             </h:form> 
                         </p:panel>
 
@@ -31,6 +30,16 @@
                             <p:column headerText="Setor">
                                 <h:outputText value="#{pessoa.setor}"/>
                             </p:column>
+
+                            <p:column>
+                                <p:commandButton value="Excluir" title="#{msgs.btRemove}"
+                                                 actionListener="#{pessoaMNG.remove()}"                                             
+                                                 onclick="if (!confirm('#{msgs.msgConfRemove}'))
+                                                                 return false" >
+                                    <f:param name="codExcluir" value="#{pessoa.id}"/>
+                                </p:commandButton>
+                            </p:column>
+
                         </p:dataTable>
 
                     </h:panelGrid> 
