--- a/TccLulu-war/web/sala.xhtml
+++ b/TccLulu-war/web/sala.xhtml
@@ -16,8 +16,7 @@
                           <h:form>
                                 <p:growl id="growl" life="2000" />     
                                 <p:commandButton value="Incluir" id="incluir"  action="incluir_sala"/>
-                                <p:commandButton value="Editar" id="editar" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
-                                <p:commandButton value="Excluir" id="excluir" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
+                                <p:commandButton value="Editar" id="editar" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />                                
                             </h:form> 
                         </p:panel>
 
@@ -25,14 +24,20 @@
                              <p:column headerText="Nome" filterBy="#{sala.lista}">
                                     <h:outputText value="#{sala.nome}"/>
                                 </p:column>
+                            
+                            <p:column>
+                                <p:commandButton value="Excluir" title="#{msgs.btRemove}"
+                                                 actionListener="#{salaMNG.remove()}"                                             
+                                                 onclick="if (!confirm('#{msgs.msgConfRemove}'))
+                                                                 return false" >
+                                    <f:param name="codExcluir" value="#{sala.id}"/>
+                                </p:commandButton>                                
+                            </p:column>                            
                         </p:dataTable>
 
                     </h:panelGrid> 
-
                 </h:form>
-
             </center>
-
         </ui:define>
     </ui:composition>
 </html>
