--- a/TccLulu-war/web/incluir_cursoExterno.xhtml
+++ b/TccLulu-war/web/incluir_cursoExterno.xhtml
@@ -10,24 +10,30 @@
             <center margin-top='-200' style="top:-500px;position: relative">
 
                 <h:form id="formulario">
-                    <p:messages autoUpdate="true"/>
+                    <p:messages autoUpdate="true"/>                    
                     <h:panelGrid>
                         <p:panel header="INCLUIR CURSO EXTERNO">
                             <h:panelGrid columns="2">
 
                                 <h:form enctype="multipart/form-data">
                                     <p:growl id="messages" showDetail="true" />
-                                    <p:outputLabel value="Colaborador"/>
+
+                                    <h:outputLabel value="Colaborador"/>
                                     <p:selectOneMenu id="pessoa" converter="pessoaConverter" value="#{curso_externoMNG.pessoa}">
                                         <f:selectItems value="#{curso_externoMNG.pessoas}" var ="vPessoa"
                                                        itemLabel="#{vPessoa.nome}"
                                                        itemValue="#{vPessoa}"/>
                                     </p:selectOneMenu>
-                                    <p:fileUpload value="#{fileUploadView.arquivo}" mode="simple" />
-                                    <p:commandButton value="GRAVAR" ajax="false" actionListener="#{fileUploadView.upload}" />
-                                    <p:commandButton value="LIMPAR" type="reset"/> 
-                                </h:form>        
+                                    <h:outputLabel value="Quantidade de Horas" style="width:80px"/> 
+                                    <p:inputText id="nome" value="#{curso_externoMNG.qtd_horas}"/>
+                                    
+                                    <br></br>
 
+                                    <p:fileUpload value="#{fileUploadView.arquivo}" mode="simple" />
+                                    <p:commandButton value="GRAVAR" ajax="false" actionListener="#{curso_externoMNG.upload()}" />
+                                    <p:commandButton value="LIMPAR" type="reset"/> 
+
+                                </h:form>
 
 
                             </h:panelGrid>
