--- a/TccLulu-war/web/incluir_video.xhtml
+++ b/TccLulu-war/web/incluir_video.xhtml
@@ -14,18 +14,12 @@
                     <h:panelGrid>
                         <p:panel header="INCLUIR VIDEOS">
                             <h:panelGrid columns="2">
-
-                                <h:form enctype="multipart/form-data">
-                                    <p:growl id="messages" showDetail="true" />
-                                    <p:outputLabel value="Video"/>
-                                    
-                                    <p:fileUpload value="#{fileUploadView.arquivo}" mode="simple" />
-                                    <p:commandButton value="GRAVAR" ajax="false" actionListener="#{fileUploadView.upload}" />
-                                    <p:commandButton value="LIMPAR" type="reset"/> 
-                                </h:form>        
-
-
-
+                                <h:outputLabel value="Nome"/>
+                                <p:inputText id="nome" value="#{videoMNG.nome}"/>
+                                <h:outputLabel value="Video"/>                                    
+                                <p:fileUpload value="#{videoMNG.arquivo}" mode="simple" />
+                                <p:commandButton value="GRAVAR" ajax="false" actionListener="#{videoMNG.save()}" />
+                                <p:commandButton value="LIMPAR" type="reset"/> 
                             </h:panelGrid>
                         </p:panel>
                     </h:panelGrid> 
