--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -20,7 +20,8 @@
                 <h:form>
                     <p:menu>
                         <p:submenu label="CURSOS">
-                            <p:menuitem value="Matriz de cursos" outcome="matriz" />                            
+                            <p:menuitem value="Matriz de cursos" outcome="matriz" />
+                            <p:menuitem value="Inscrições" outcome="incluir_inscricao" /> 
                         </p:submenu>
                         <p:submenu label="CURRÍCULO">
                             <p:menuitem value="Incluir curso externo" outcome="incluir_cursoExterno"/>
