--- a/TccLulu-war/web/incluir_cursoExterno.xhtml
+++ b/TccLulu-war/web/incluir_cursoExterno.xhtml
@@ -9,38 +9,38 @@
         <ui:define name="centro">
             <center margin-top='-200' style="top:-500px;position: relative">
 
-                <h:form id="formulario">
-                    <p:messages autoUpdate="true"/>                    
-                    <h:panelGrid>
-                        <p:panel header="INCLUIR CURSO EXTERNO">
-                            <h:panelGrid columns="2">
 
-                                <h:form enctype="multipart/form-data">
-                                    <p:growl id="messages" showDetail="true" />
+                <p:messages autoUpdate="true"/>                    
+                <h:panelGrid>
+                    <p:panel header="INCLUIR CURSO EXTERNO">
+                        <h:panelGrid columns="2">
 
-                                    <h:outputLabel value="Colaborador"/>
-                                    <p:selectOneMenu id="pessoa" converter="pessoaConverter" value="#{curso_externoMNG.pessoa}">
-                                        <f:selectItems value="#{curso_externoMNG.pessoas}" var ="vPessoa"
-                                                       itemLabel="#{vPessoa.nome}"
-                                                       itemValue="#{vPessoa}"/>
-                                    </p:selectOneMenu>
-                                    <h:outputLabel value="Quantidade de Horas" style="width:80px"/> 
-                                    <p:inputText id="nome" value="#{curso_externoMNG.qtd_horas}"/>
-                                    
-                                    <br></br>
+                            <h:form enctype="multipart/form-data">
+                                <p:growl id="messages" showDetail="true" />
 
-                                    <p:fileUpload value="#{fileUploadView.arquivo}" mode="simple" />
-                                    <p:commandButton value="GRAVAR" ajax="false" actionListener="#{curso_externoMNG.upload()}" />
-                                    <p:commandButton value="LIMPAR" type="reset"/> 
+                                <h:outputLabel value="Colaborador"/>
+                                <p:selectOneMenu id="pessoa" converter="pessoaConverter" value="#{curso_externoMNG.pessoa}">
+                                    <f:selectItems value="#{curso_externoMNG.pessoas}" var ="vPessoa"
+                                                   itemLabel="#{vPessoa.nome}"
+                                                   itemValue="#{vPessoa}"/>
+                                </p:selectOneMenu>
+                                <h:outputLabel value="Quantidade de Horas" style="width:80px"/> 
+                                <p:inputText id="nome" value="#{curso_externoMNG.qtd_horas}"/>
 
-                                </h:form>
+                                <br></br>
+
+                                <p:fileUpload value="#{curso_externoMNG.arquivo}" mode="simple" />
+                                <p:commandButton value="GRAVAR" ajax="false" actionListener="#{curso_externoMNG.upload()}" />
+                                <p:commandButton value="LIMPAR" type="reset"/> 
+
+                            </h:form>
 
 
-                            </h:panelGrid>
-                        </p:panel>
-                    </h:panelGrid> 
+                        </h:panelGrid>
+                    </p:panel>
+                </h:panelGrid> 
 
-                </h:form>
+
 
             </center>
 
