--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -22,6 +22,7 @@
                         <p:submenu label="CURSOS">
                             <p:menuitem value="Matriz de cursos" outcome="matriz" />
                             <p:menuitem value="Inscrições" outcome="incluir_inscricao" /> 
+                            <p:menuitem value="Solicitar Curso" outcome="solicitacao" /> 
                         </p:submenu>
                         <p:submenu label="CURRÍCULO">
                             <p:menuitem value="Incluir curso externo" outcome="incluir_cursoExterno"/>
