--- a/TccLulu-war/web/pessoa.xhtml
+++ b/TccLulu-war/web/pessoa.xhtml
@@ -15,39 +15,37 @@
                         <p:panel header="CADASTRO DE COLABORADORES">
                             <h:form>
                                 <p:growl id="growl" life="2000" />     
-                                <p:commandButton value="Incluir" id="incluir"  action="incluir_pessoa"/>
-                                <p:commandButton value="Editar" id="editar" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />                                
-                            </h:form> 
+                                <p:commandButton value="Incluir" id="incluir"  action="incluir_pessoa"/>                            
+                            </h:form>                       
+
+                            <p:dataTable id="sala" value="#{pessoaMNG.lista}" emptyMessage="Não há registros" var="pessoa" paginator="true" rows="4" style="width: 820px">
+                                <p:column headerText="Nome" filterBy="#{pessoa.lista}">
+                                    <h:outputText value="#{pessoa.nome}"/>
+                                </p:column>
+                                <p:column headerText="Cargo">
+                                    <h:outputText value="#{pessoa.cargo}"/>
+                                </p:column>                            
+                                <p:column headerText="Setor">
+                                    <h:outputText value="#{pessoa.setor}"/>
+                                </p:column>
+                                <p:column>
+                                    <p:commandButton value="Editar" action="#{pessoaMNG.prepUpdate()}" ajax="false">
+                                        <f:param name="codEditar" value="#{pessoa.id}"/>                              
+                                    </p:commandButton>
+                                </p:column>
+                                <p:column>
+                                    <p:commandButton value="Excluir" title="#{msgs.btRemove}"
+                                                     actionListener="#{pessoaMNG.remove()}"                                             
+                                                     onclick="if (!confirm('#{msgs.msgConfRemove}'))
+                                                             return false" >
+                                        <f:param name="codExcluir" value="#{pessoa.id}"/>
+                                    </p:commandButton>
+                                </p:column>
+                            </p:dataTable>
                         </p:panel>
-
-                        <p:dataTable id="sala" value="#{pessoaMNG.lista}" emptyMessage="Não há registros" var="pessoa" paginator="true" rows="4" style="width: 820px">
-                            <p:column headerText="Nome" filterBy="#{pessoa.lista}">
-                                <h:outputText value="#{pessoa.nome}"/>
-                            </p:column>
-                            <p:column headerText="Cargo">
-                                <h:outputText value="#{pessoa.cargo}"/>
-                            </p:column>                            
-                            <p:column headerText="Setor">
-                                <h:outputText value="#{pessoa.setor}"/>
-                            </p:column>
-
-                            <p:column>
-                                <p:commandButton value="Excluir" title="#{msgs.btRemove}"
-                                                 actionListener="#{pessoaMNG.remove()}"                                             
-                                                 onclick="if (!confirm('#{msgs.msgConfRemove}'))
-                                                                 return false" >
-                                    <f:param name="codExcluir" value="#{pessoa.id}"/>
-                                </p:commandButton>
-                            </p:column>
-
-                        </p:dataTable>
-
                     </h:panelGrid> 
-
                 </h:form>
-
             </center>
-
         </ui:define>
     </ui:composition>
 </html>
