--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -21,7 +21,7 @@
                     <p:menu>
                         <p:submenu label="CURSOS">
                             <p:menuitem value="Matriz de cursos" outcome="matriz" />
-                            <p:menuitem value="Inscrições" outcome="incluir_inscricao" /> 
+                            <p:menuitem value="Inscrições" outcome="inscritos" /> 
                             <p:menuitem value="Solicitar Curso" outcome="solicitacao" /> 
                         </p:submenu>
                         <p:submenu label="CURRÍCULO">
