--- a/TccLulu-war/web/alterar_solicitacao.xhtml
+++ b/TccLulu-war/web/alterar_solicitacao.xhtml
@@ -11,19 +11,21 @@
                 <h:form id="formulario">
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
-                        <p:panel header="INCLUIR SALA">
-                            <h:panelGrid columns="2">
-                                <h:outputLabel value="Nome"/> 
-                                <p:inputText id="nome" value="#{salaMNG.nome}"/>
-                                <p:commandButton value="GRAVAR" actionListener="#{salaMNG.save}" ajax="false"/>
+                        <h:inputHidden value="#{solicitacaoMNG.id}"/> 
+                        <p:panel header="ALTERAR SOLICITACAO">
+                            <h:panelGrid columns="2" id="grid">                                                               
+                                <h:outputLabel value="Nome"/>
+                                <p:inputText id="nome" value="#{solicitacaoMNG.curso}"/> 
+                                <h:outputLabel value="Justificativa"/>
+                                <p:inputText id="justificativa" value="#{solicitacaoMNG.justificativa}"/> 
+                                <p:commandButton value="GRAVAR" actionListener="#{solicitacaoMNG.update}" ajax="false" update="grid"/>
                                 <p:commandButton value="LIMPAR" type="reset"/>
-                                <p:commandButton value="CANCELAR" id="cancelar"  action="sala"/> 
+                                <p:commandButton value="CANCELAR" id="cancelar"  action="solicitacao"/>
                             </h:panelGrid>
                         </p:panel>
-                    </h:panelGrid>                             
-                </h:form>                
+                    </h:panelGrid> 
+                </h:form>
             </center>
         </ui:define>
     </ui:composition>
 </html>
-
