--- a/TccLulu-war/web/inscritos.xhtml
+++ b/TccLulu-war/web/inscritos.xhtml
@@ -4,36 +4,46 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">     
+      xmlns:f="http://xmlns.jcp.org/jsf/core"> 
     <ui:composition template="/padrao.xhtml">
         <ui:define name="centro">
-            <center margin-top='-500' style="top:-900px;">
-
-
+            <center margin-top='-200' style="top:-500px;position: relative">
 
                 <h:form id="formulario">
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
-                        <p:panel header="Inscritos"> 
-
-                            <p:dataTable id="inscritos" value="#{inscricaoMNG.lista}" emptyMessage="Não há registros" var="inscricao" paginator="true" rows="4" rowKey="#{inscricao.id}">
-                                <p:column headerText="Cracha" filterBy="#{inscricao.lista}">
-                                    <h:outputText value="#{inscricao.cracha}"/>                            
-                                </p:column>                                
-                                <p:column headerText="Nome" filterBy="#{inscricao.lista}">
-                                    <h:outputText value="#{inscricao.nome}"/>
-                                </p:column>                                
-                                <p:column headerText="Funcao">
-                                    <h:outputText value="#{inscricao.funcao}"/>
+                        <p:panel header="INSCRITOS">
+                            <h:form>
+                                <p:growl id="growl" life="2000" />     
+                                <p:commandButton value="Incluir" id="incluir"  action="incluir_inscricao"/>                            
+                            </h:form> 
+                            <p:dataTable id="inscritos" value="#{inscricaoMNG.lista}" emptyMessage="Não há registros" var="sala" paginator="true" rows="4" style="width: 820px">
+                                <p:column headerText="id">
+                                    <h:outputText value="#{inscricao.id}"/>
                                 </p:column>
-                                <p:column headerText="Centro de custo">
-                                    <h:outputText value="#{inscricao.centro_custo}"/>
-                                </p:column>                                
+                                <p:column headerText="Curso"  filterBy="#{inscricao.lista}">
+                                    <h:outputText value="#{inscricao.curso}"/>
+                                </p:column>                            
+                                <p:column headerText="Pessoa">
+                                    <h:outputText value="#{inscricao.pessoa}"/>
+                                </p:column>
+                                <p:column>
+                                    <p:commandButton value="Editar" action="#{inscricaoMNG.prepUpdate()}" ajax="false">
+                                        <f:param name="codEditar" value="#{inscricao.id}"/>                              
+                                    </p:commandButton>
+                                </p:column>
+                                <p:column>
+                                    <p:commandButton value="Excluir" title="#{msgs.btRemove}"
+                                                     actionListener="#{inscricaoMNG.remove()}"                                             
+                                                     onclick="if (!confirm('#{msgs.msgConfRemove}'))
+                                                                 return false" >
+                                        <f:param name="codExcluir" value="#{inscricao.id}"/>
+                                    </p:commandButton>                                
+                                </p:column>                            
                             </p:dataTable>
                         </p:panel>
-                    </h:panelGrid>
+                    </h:panelGrid> 
                 </h:form>
-
             </center>
         </ui:define>
     </ui:composition>
