--- a/TccLulu-war/web/alterar_video.xhtml
+++ b/TccLulu-war/web/alterar_video.xhtml
@@ -11,7 +11,7 @@
                 <h:form id="formulario">
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
-                        <h:inputHidden value="#{salaMNG.id}"/> 
+                        <h:inputHidden value="#{videoMNG.id}"/> 
                         <p:panel header="ALTERAR VIDEO">
                             <h:panelGrid columns="2">                                                               
                                 <h:outputLabel value="Nome"/>
