--- a/TccLulu-war/web/video.xhtml
+++ b/TccLulu-war/web/video.xhtml
@@ -33,7 +33,7 @@
                                     </p:commandButton>
                                 </p:column>
                                 <p:column>
-                                    <p:commandButton value="Upload" action="incluir_arquivoVideo" ajax="false">
+                                    <p:commandButton value="Upload" action="#{videoMNG.prepUpdate2()}" ajax="false">
                                         <f:param name="codEditar" value="#{video.id}"/>                              
                                     </p:commandButton>
                                 </p:column>
