--- a/TccLulu-war/web/inscritos.xhtml
+++ b/TccLulu-war/web/inscritos.xhtml
@@ -17,7 +17,7 @@
                                 <p:growl id="growl" life="2000" />     
                                 <p:commandButton value="Incluir" id="incluir"  action="incluir_inscricao"/>                            
                             </h:form> 
-                            <p:dataTable id="inscritos" value="#{inscricaoMNG.lista}" emptyMessage="Não há registros" var="sala" paginator="true" rows="4" style="width: 820px">
+                            <p:dataTable id="inscritos" value="#{inscricaoMNG.lista}" emptyMessage="Não há registros" var="inscricao" paginator="true" rows="4" style="width: 800px">
                                 <p:column headerText="id">
                                     <h:outputText value="#{inscricao.id}"/>
                                 </p:column>
