--- a/TccLulu-war/web/incluir_inscricao.xhtml
+++ b/TccLulu-war/web/incluir_inscricao.xhtml
@@ -25,7 +25,8 @@
                                                    itemValue="#{vPessoa}"/>
                                 </p:selectOneMenu>                                                                        
                                 <p:commandButton value="GRAVAR" actionListener="#{inscricaoMNG.save}" ajax="false"/>
-                                <p:commandButton value="LIMPAR" type="reset"/> 
+                                <p:commandButton value="LIMPAR" type="reset"/>
+                                <p:commandButton value="CANCELAR" id="cancelar"  action="inscritos"/> 
                             </h:panelGrid>
                         </p:panel>
                     </h:panelGrid>                             
