--- a/TccLulu-war/web/padrao.xhtml
+++ b/TccLulu-war/web/padrao.xhtml
@@ -31,7 +31,7 @@
                         </p:submenu>
                         <p:submenu label="BIBLOTECA VIRTUAL">
                             <p:menuitem value="Vídeos" outcome="video"/>
-                            <p:menuitem value="Monografias" />
+                            <p:menuitem value="Monografias" outcome="monografia" />
                             <p:menuitem value="TCC's" />                    
                         </p:submenu>                       
                         <p:submenu label="CONFIGURAÇÕES">
